# SquireCore

./: CMakeLists.txt  bindgen.py  ffi_build.bat  ffi_build.sh  squire_core.h
squire_lib/: Cargo.toml
squire_lib/src/: ffi.rs  ffi_rounds.rs  ffi_tournament.rs  fluid_pairings.rs  lib.rs  round_registry.rs  settings.rs
squire_lib/tests/: fluid_pairings.rs
